# Drunk-Venti-Rust

./: .build.yml  .dockerignore  Cargo.toml  Dockerfile  LICENCE.md  README.md
.github/workflows/: main.yml  rust.yml
src/: main.rs
src/data/: artifacts.rs  builds.rs  characters.rs  domains.rs  elements.rs  events.rs  items.rs  mod.rs  shared_structs.rs  weapons.rs
src/interactions/: mod.rs  status_message.rs
src/interactions/genshin/: artifacts.rs  build.rs  mod.rs  weapons.rs
src/utils/: mod.rs  mongo.rs
test/: artifact.json  build.json  character.json  domain.json  element.json  events.json  item.json  weapon.json
